# Splatoon3Rank

./: .gitignore  .pre-commit-config.yaml  README.md  ability_data.py  analyze_battle_records.py  base_weapon_strength.ipynb  base_weapon_strength.py.ipynb  battle-results-csv-schema.md  battle_record.py  battle_record_analysis.py  environment.yml  kit_data.py  pyproject.toml  read_battle_records.py  read_battle_records_from_zip.py  stage_data.py  weapon_data.py
